<resources>
    <string name="app_name">MDKP</string>
    <string name="reg_title">Войти</string>
    <string name="login">логин</string>
    <string name="reg_loginTip">*логин, телефон, e-mail</string>
    <string name="reg_password">пароль</string>
    <string name="reg_registraсia">зарегистрироваться</string>
    <string name="registrate">Регистрация</string>
    <string name="reg_forgetPas">забыли пароль?</string>
    <string name="reg_vh">вход</string>
    <string name="title_activity_autorizing">Autorizing</string>
    <string name="reg_logError">обязательно для заполнения</string>
    <string name="reg_logInvalid">Проверте введённые данные</string>
    <string name="reg_cancel">отмена</string>
    <string name="reg_continue">далее</string>
    <string name="lastName">фамилия</string>
    <string name="name">имя</string>
    <string name="email">эл. почта</string>
    <string name="phone">номер телефона</string>
    <string name="reg_repeatPassword">повторите пароль</string>
    <string name="reg_repeatPasswordError">пароли не совпадают</string>
    <string name="reg_registerFail">не удалось зарегистрировать пользователя</string>
    <string name="reg_registerSucce">профиль успешно создан!</string>
    <string name="cancel">назад</string>
    <string name="singOut">выйти</string>
    <string name="noFindUser">Пользователь не найден</string>
    <string name="serverError">Ошибка при подключении к серверу</string>
    <string name="reviews">отзывы</string>
    <string name="review">отзыв</string>
    <string name="mark">оценка:</string>
    <string name="author">автор</string>
    <string name="title">заголовок</string>
    <string name="basic">содержание</string>
    <string name="publish">опубликовать</string>
    <string name="create">создать</string>
    <string name="createReview">оставить отзыв</string>
    <string name="userInfo">Данные клиента</string>
    <string name="adminInfo">Данные администратора</string>
    <string name="engineerInfo">Данные иженера</string>
    <string name="userGroup">Выберите группу пользователей</string>
    <string name="addUser">Добавление клиента</string>
    <string name="addAdmin">Добавление администратора</string>
    <string name="addEngineer">Добавление инженера</string>
    <string name="infillNecc">Необходимо заполнить все поля</string>
    <string name="speciality">специальность</string>
    <string name="loginEngineerError">логин не должен содержать "admin"</string>
    <string name="changePassword">Изменить пароль</string>
    <string name="newPassword">новый пароль</string>
    <string name="change">изменить</string>
    <string name="addWork">добавить смену</string>
    <string name="succesful">успешно</string>
    <string name="error">ошибка</string>
    <string name="vBan">заблокировать</string>
    <string name="razBan">раблокировать</string>
    <string name="addSmena">создать смену</string>
    <string name="addSetka">В сетку</string>
    <string name="work">услуги</string>
    <string name="timetable">расписание</string>
    <string name="history">история</string>
    <string name="addZapis">записать клиента</string>
    <string name="chat">чат</string>
    <string name="chats">чаты</string>
    <string name="smens">смены</string>
    <string name="zapis">запись на посещение</string>
    <string name="data">Дата</string>
    <string name="timeFrom">С</string>
    <string name="timeTo">По</string>
    <string name="engineer">Инженер</string>
    <string name="delete">удалить</string>
    <string name="smenaInfo">Данные смены</string>
    <string name="service">услуга</string>
    <string name="client">клиент</string>
    <string name="zaivka">заявки</string>
    <string name="vBane">Вас заблокировали</string>
    <string name="workWithWorks">работа с услугами</string>
    <string name="empty">пусто</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_spisok_vidov_adapter">spisokVidovAdapter</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>