<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".engineerInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="@string/engineerInfo"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:id="@+id/nameEngineer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp" />

            <TextView
                android:id="@+id/lastnameEngineer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lastName"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"/>

            <TextView
                android:id="@+id/emailEngineer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"/>

            <TextView
                android:id="@+id/phoneEngineer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"/>

            <TextView
                android:id="@+id/loginEngineer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"/>

            <TextView
                android:id="@+id/specialityEngineer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speciality"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addWork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addWork" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:text="@string/changePassword"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newPassword"
                app:counterMaxLength="40"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_repeatPassword"
                app:counterMaxLength="40"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repeatPasswordView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/changePasBut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/vBan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vBan" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>