<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="@string/smenaInfo"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/engineer"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"/>

        <TextView
            android:id="@+id/timeFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeFrom"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"/>

        <TextView
            android:id="@+id/timeTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeTo"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

    </LinearLayout>

</FrameLayout>