<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".adminInfo">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="@string/adminInfo"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <TextView
            android:id="@+id/nameAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp" />

        <TextView
            android:id="@+id/lastnameAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lastName"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"/>

        <TextView
            android:id="@+id/emailAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"/>

        <TextView
            android:id="@+id/phoneAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"/>

        <TextView
            android:id="@+id/loginAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"/>

    </LinearLayout>

</FrameLayout>